4.0.117
- Added Incomplete filter to the tasks list
- Links in emailwindow on startpage open in new browser tab.
- Unset invalid attributes while using importVObject function in Contact model.
- Throw a fileNotFound exception when a file that needs to be downloaded is not found on the server.

19-10-2012 4.0.116
- Also show disabled users in selectuser
- Correct key.txt permissions on fresh install
- Check if project folders are available in webdav
- Better error reporting for LDAP auth and sync
- Log about changes to postfix mailboxes and domains
- Fixed upgrade from 3 to 4 issues
- Custom field records were not deleted

17-10-2012 4.0.115
- PDF error in billing

17-10-2012 4.0.114
- Invalid weekly recurrence rule for funambol
- Error Call to a member function isWritable() on a non-object in /usr/share/groupoffice/modules/files/model/Folder.php fixed.
- Removed call to the htmleditor's syncValue() function when the editor is in sourceEdit mode.

16-10-2012 4.0.113
- When adding / deleting contacts from address list thru the email message list, the system looks also for the second and third email addresses of contacts.
- Wrong timezone info in vcalendar export
- Check filesystem permissions before change file or folder models
- Copy paste in same files folder appends a number eg. test becomes test (1)
- Editing sieve actions resulted in duplication
- Controller actions can be locked to only one user.
- Custom fields were disabled in last version.

12-10-2012 4.0.112
- Email validation will no longer accept 2 dots right after each other in domain part
- First ticket by customer did not send an autoreply message
- Workaround IE DST bug in month grid of calendar
- Reimplemented show from others in ticketsystem
- Changed the classname for MultiSelectGrid in projects to: GO_Projects_Model_Status
- In PHP 5.4, ReflectionProperty::getName() sometimes erroneously returned false.
- Portlet folders were not deleted along with account.